fix: java 8 isBlink to trim.isEmpty